--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <h1>Hola, Soy SAVU041202</h1>
     <h2>Les dejo los Links sobre mi</h2>
     <ol>
-    <li><a href="" target="_blank"></a></li>
+    <li><a href="RS.html" target="_blank">REDES SOCIALES</a></li>
     <li><a href="" target="_blank"></a></li>
     <li><a href="" target="_blank"></a></li>
 
