--- a/CDY.html
+++ b/CDY.html
@@ -10,4 +10,7 @@
     <h1>Hola, Soy SAVU041202</h1>
     <h1>Les dejo los Links sobre Mis Canales de Youtube</h1>
     <ol>
+    <li><a href="https://www.youtube.com/channel/UCXv3fdLm49J3YpPPPPRE5-A" target="_blank">Youtube Principal</a></li>
+    <li><a href="https://www.youtube.com/channel/UCGAfZIXtLwhsE9F6nJalw9Q" target="_blank">Youtube Secundario</a></li>
+    <li><a href="https://www.youtube.com/channel/UC-w2dyiqze6F6IxbQUBSfoA" target="_blank">La Duda Oficial Fans</a></li>
     
