--- a/MSC.html
+++ b/MSC.html
@@ -10,5 +10,8 @@
     <h1>Hola, Soy SAVU041202</h1>
     <h1>Les dejo los Links sobre Mis Canciones Favoritas</h1>
     <ol>
-    
+        <li><a href="https://www.youtube.com/watch?v=e0VGcdlHkhg" target="_blank">La Duda Me Gusta Mi Vida Ft.Yeras Bretado</a></li>
+        <li><a href="https://www.youtube.com/watch?v=J13rjbAnBlY" target="_blank">La Duda En Dubai</a></li>
+        <li><a href="https://www.youtube.com/watch?v=RdZsNZPyq0U" target="_blank">La Duda 10 Navidades Ft.Grupo Recluta</a></li> 
+        <li><a href="https://www.youtube.com/watch?v=zw0CE8-8t0Y" target="_blank">La Duda El Llamado Ft.Fernando Ventura</a></li>
     </ol>
