--- a/LD.html
+++ b/LD.html
@@ -25,7 +25,7 @@
 <p>Juan Carlos Bracamontes es un cantautor y youtuber. 
 </blockquote>
 </p>
-<img src="Grillo.jpg" width="370" height="450">
+<img src="Recursos/Grillo.jpg" width="370" height="450">
 </section>
 
 <section id="Ringo">
