--- a/LD.html
+++ b/LD.html
@@ -13,7 +13,7 @@
 <header> La Agrupacion La Duda es Originaria de Guamuchil,Sinaloa. 
 </blockquote>
 </header>
-<img src="La Duda.jpg" width="500" height="500">
+<img src="Recursos/La Duda.jpg" width="500" height="500">
 <a href="https://www.youtube.com/channel/UCsLr0cHb8-PgIj4jQPoZAtA" target="_blank" class="cta__youtube"><h1>LA DUDA OFICIAL</h1></a>
 <header> Mi Cancion favorita es </header>
 <a href="https://www.youtube.com/watch?v=e0VGcdlHkhg" target="_blank" class="cta__youtube"><h1>ME GUSTA MI VIDA</h1></a>
@@ -34,7 +34,7 @@
 <p>Ringo es un persona que requintea en el cual esta en dicha agrupacion
 </blockquote>
 </p>
-<img src="Ringo.jpg" width="400" height="450">
+<img src="Recursos/Ringo.jpg" width="400" height="450">
 </section>
 
 <section id="Ringito">
@@ -42,7 +42,7 @@
 <blockquote cite="https://www.instagram.com/ringuito_laduda/?hl=es">
 <p>Ringito es un persona del staff de dicha agrupacion.</p>
 </blockquote>
-<img src="Ringuito.jpg" width="400" height="450">
+<img src="Recursos/Ringuito.jpg" width="400" height="450">
 </section>
 
 <section id="Josue">
@@ -51,7 +51,7 @@
 <p>Josue es un persona integrante de dicha agrupacion. Ademas hace contenido de comida para Youtube.
 </blockquote>
 </p>
-<img src="Josue.jpg" width="430" height="450">
+<img src="Recursos/Josue.jpg" width="430" height="450">
 
 </section>
 
@@ -61,6 +61,6 @@
 <p>Josue es un guitarrista de dicha agrupacion.
 </blockquote>
 </p>
-<img src="Woody.jpg" width="430" height="450">
+<img src="Recursos/Woody.jpg" width="430" height="450">
 </section>
 </body> 
