--- a/Index.html
+++ b/Index.html
@@ -13,4 +13,5 @@
     <li><a href="RS.html" target="_blank">REDES SOCIALES</a></li>
     <li><a href="CDY.html" target="_blank">CANALES DE YOUTUBE</a></li>
     <li><a href="MSC.html" target="_blank">MUSICA</a></li>
+    <li><a href="LD.html" target="_blank">LA DUDA</a></li>
 
