--- a/RS.html
+++ b/RS.html
@@ -10,6 +10,6 @@
     <h1>Hola, Soy SAVU041202</h1>
     <h1>Les dejo los Links sobre mis Redes Sociales</h1>
     <ol>
-    <li><a href="https://www.facebook.com/SergioAlexander041202" target="_blank">Facebook</a></li>
+    <li><a href="https://www.facebook.com/SAVU041202" target="_blank">Facebook</a></li>
     <li><a href="https://www.instagram.com/savu_041202/?hl=es" target="_blank">Instagram</a></li>
     <li><a href="https://twitter.com/SAVU_041202" target="_blank">Twitter</a></li>
